K8s/Mcommerce.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mcommerce
  labels:
    name: mcommerce
