K8s/client-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: mcommerce
spec:
  selector:
    app: client
  ports:
    - port: 3000
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: mcommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: oakhmis/client-image:latest
          ports:
            - containerPort: 3000
