K8s/order-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: mcommerce
spec:
  selector:
    app: order
  ports:
    - port: 5001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: mcommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      containers:
        - name: order
          image: oakhmis/order-image:latest
          ports:
            - containerPort: 5001
              name: order-port
