K8s/payment-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: mcommerce
spec:
  selector:
    app: payment
  ports:
    - port: 5002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: mcommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: oakhmis/payment-image:latest
          ports:
            - containerPort: 5002
              name: payment-port
