K8s/product-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: mcommerce
spec:
  selector:
    app: product
  ports:
    - port: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: mcommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
      version: v1
  template:
    metadata:
      labels:
        app: product
        version: v1
    spec:
      containers:
        - name: product
          image: oakhmis/product-image:latest
          ports:
            - containerPort: 5000
              name: product-port
